Додав статистику за кількості слів взагалі та у користувача